logs/pymazon.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pymazon-0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymazon'...
Listing './lib/python3.5/site-packages/pymazon/cmd'...
Compiling './lib/python3.5/site-packages/pymazon/cmd/ui.py'...
***   File "./lib/python3.5/site-packages/pymazon/cmd/ui.py", line 65
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pymazon/core'...
Compiling './lib/python3.5/site-packages/pymazon/core/decryptor.py'...
***   File "./lib/python3.5/site-packages/pymazon/core/decryptor.py", line 28
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pymazon/core/downloader.py'...
***   File "./lib/python3.5/site-packages/pymazon/core/downloader.py", line 69
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pymazon/core/settings.py'...
***   File "./lib/python3.5/site-packages/pymazon/core/settings.py", line 26
    print 'Warning:'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pymazon/gtk'...
Compiling './lib/python3.5/site-packages/pymazon/gtk/ui.py'...
***   File "./lib/python3.5/site-packages/pymazon/gtk/ui.py", line 256
    print 'here'
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pymazon/qt'...
Listing './lib/python3.5/site-packages/pymazon/resource'...
Listing './lib/python3.5/site-packages/pymazon/resource/icons'...
Listing './lib/python3.5/site-packages/pymazon/util'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
